--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,6 +10,14 @@ body{
     background: #FF0000;
 }
 
+.head-banner{
+    opacity: 0;
+    transform: translateY(-100%);
+}
+.head-banner .home{
+    padding: 2.5em;
+}
+
 .style-class{
     color: #13b3ff;
     font-weight: 500;
@@ -86,6 +94,9 @@ body{
 
 
 .sample-container{
+    opacity: 0;;
+    transform: translateY(100%);
+    /* transition: all ease 0.8s; */
     box-shadow: 0px 0px 38px rgba(0, 0, 0, 0.62), 0px 0px 12px rgba(0, 0, 0, 0.64);
     border-radius: 15px;
     margin: 8rem auto;
@@ -135,9 +146,6 @@ body{
     color: #efdab9;
     padding: 2rem 7rem;
     letter-spacing: 1px;
-}
-.sample-container .body-description .content .samples{
-
 }
 .sample-container .body-description .content .samples .sample-heading{
     font-weight: 500;
@@ -203,3 +211,47 @@ body{
 
 
 
+@media only screen and (max-width: 600px) {
+    .home .primary-para{
+        width:calc(100% - 1.5em);
+    }
+    .start-up .try,.sample-container .body{
+        flex-flow: column-reverse;
+    }
+    .sample-container .body-description{
+        width:100%;
+    }
+    .sample-container .body-description .content .header{
+        padding: 2rem 1rem;
+    }
+    .body-description .data{
+        height: 20px !important;;
+    }
+    .sample-container .body-code{
+        width: 100%;
+        height: 200px;
+    }
+    .sample-container .body-code .code-container{
+        height: 200px;
+        max-width: 100%;
+    }
+    .sample-container{
+        height: fit-content;
+    }
+    .sample-container .body-description .actions{
+        height: 6em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin: 0px 1rem 0rem 0rem */
+    }
+    .sample-container .body-description .actions .action-button{
+        margin: 0px 1rem 0rem 0rem; 
+    }
+  }
+
+  @media only screen and (min-width: 600px) and (max-width : 768px) {
+    .sample-container .body-description .content .header{
+        padding: 0.5em;
+    }
+  }
